adapte for mobile and refactored code minify

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <span>3D Site Example</span>
+        <span>Sphere Site Example</span>
         <span class="square"></span>
         <span>Raccon</span>
     </nav>
@@ -22,18 +22,18 @@
             </p>
         </div>
     </section>
-    <h2>3D Materials</h2>
+    <h2>Sphere Materials</h2>
     <section class="cards">
         <div class="card">
-            <div id="3dA"></div>
+            <div id="SphereA"></div>
             <p>Item A</p>
         </div>
         <div class="card">
-            <div id="3dB"></div>
+            <div id="SphereB"></div>
             <p>Item B</p>
         </div>
         <div class="card">
-            <div id="3dC"></div>
+            <div id="SphereC"></div>
             <p>Item C</p>
         </div>
     </section>
